--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,69 @@
+asttokens==2.2.1
+attrs==23.1.0
+backcall==0.2.0
+blinker==1.6.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+comm==0.1.3
+customtkinter==5.1.2
+darkdetect==0.8.0
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
+fastjsonschema==2.17.1
+Flask==2.3.2
+future==0.18.3
+geocoder==1.38.1
 idna==3.4
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
+ipykernel==6.23.1
+ipython==8.12.2
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+nbformat==5.8.0
+nest-asyncio==1.5.6
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.2
+parso==0.8.3
+patsy==0.5.3
+pickleshare==0.7.5
+Pillow==9.4.0
+pkgutil_resolve_name==1.3.10
+platformdirs==3.5.1
+plotly==5.14.1
+prompt-toolkit==3.0.38
+psutil==5.9.5
+pure-eval==0.2.2
+Pygments==2.15.1
+pyperclip==1.8.2
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2023.3
+pywin32==306
+pyzmq==25.1.0
+ratelim==0.1.6
 requests==2.28.2
+scipy==1.10.1
+six==1.16.0
+stack-data==0.6.2
+statsmodels==0.14.0
+tenacity==8.2.2
+tkintermapview==1.29
+tornado==6.3.2
+traitlets==5.9.0
+typing_extensions==4.6.2
+tzdata==2023.3
 urllib3==1.26.15
+wcwidth==0.2.6
+Werkzeug==2.3.4
+zipp==3.15.0
